# elastic_stresses_py

./: .gitignore  Coulomb_tool.txt  README.md  config.txt  environment.yml  example_config.txt  license.md  pyproject.toml  requirements.yml  setup.py  test_run.sh  version.txt
Code/: configure_calc.py  conversion_math.py  coulomb_collections.py  driver.py  elastic_stresses_driver.py  haversine.py  input_values.py  io_additionals.py  io_aftershocks.py  io_inp.py  io_inr.py  io_intxt.py  io_inzero.py  output_manager.py  read_inp.py  read_inr.py  run_dc3d.py  test_my_functions.py  wells_and_coppersmith.py
Example/: Python_Displacement_model.eps  Python_test_case.eps  coulomb_test_case.eps  coulomb_test_case_mapview.eps  test_case_subfaulted.inp
Examples/: test_case_receiver.inp
Examples/Inputs/: 20100110_aftershocks_ncsn.txt  M6.5.inp  M6.8_2014.inzero
Inputs/: M5.2_2020.inzero  M6.6_2016.intxt  M6.6_2016_afterslip.intxt  M6.8_2014.intxt  M6.8_2014.inzero  M6.8_2014_afterslip.intxt  M6.8_convenient_inputs.intxt  M6p8.inp  M7.2_2005_afterslip.intxt  see_stress_shadow.inp
PyCoulomb/: __init__.py  configure_calc.py  conversion_math.py  coulomb_collections.py  elastic_stresses_driver.py  input_values.py  io_additionals.py  io_inp.py  io_inr.py  io_intxt.py  io_inzero.py  output_manager.py  pyc_fault_object.py  pygmt_plots.py  run_dc3d.py  run_mogi.py  run_okada_wrapper.py  utilities.py
PyCoulomb/Elastic_stresses_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PyCoulomb/disp_points_object/: __init__.py  compute_rms.py  disp_points_object.py  inputs.py  io_gmt.py  outputs.py  utilities.py
PyCoulomb/fault_slip_object/: __init__.py  disp_points_object.py  fault_slip_object.py  io_four_corners.py  io_geojson.py  (+6 more)
examples/: benchmark_config.txt  example_config.txt
test/: test_fault_format_conversions.py  test_functions.py  test_point_source.py  test_rectangle_vs_triangles.py
(+107 files in other folders)
