[tool.poetry]
name = "elastic_stresses_py"
version = "2.0.0"
description = "Simple coseismic stress and displacement calculator (a mini-Coulomb, but in Python)"
authors = ["Kathryn Materna <kmaterna@berkeley.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kmaterna/elastic_stresses_py"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
elastic_stresses_config_writer = "elastic_stresses_py.PyCoulomb.bin.elastic_stresses_config_writer:main"
elastic_stresses_driver = "elastic_stresses_py.PyCoulomb.bin.elastic_stresses_driver:main"
disp_okada_driver = "elastic_stresses_py.PyCoulomb.bin.disp_okada_driver:main"


[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26"
scipy = ">=1.10"
matplotlib = ">=3.4"
pygmt = ">0.8"
pandas = "*"
Tectonic-Utils = "^0.1.0"


[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
